Fix heading align-content and justify-content

--- a/styles.css
+++ b/styles.css
@@ -135,7 +135,8 @@ h3 {
     align-items: center;
     font-size: 20px;
     border: 1px solid black;
-    align-content: center;
+    align-content: end;
+    justify-content: center;
 }
 
 .popular div {
@@ -148,6 +149,6 @@ h3 {
     align-items: center;
     font-size: 20px;
     border: 1px solid black;
-    align-content: center;
+    align-content: end;
     justify-content: center;
 }
